--- a/cn.zh-cn/用户指南/修改告警规则.md
+++ b/cn.zh-cn/用户指南/修改告警规则.md
@@ -6,7 +6,7 @@
 2.  单击“管理与部署 \> 云监控”。
 3.  单击“告警 \> 告警规则，进入告警规则界面。
 4.  你可以选择以下两个路径进入告警规则修改页面：
-    -   在“告警规则”界面，单击待修改告警规则所在行的“修改”按钮；
+    -   在“告警规则”界面，单击待修改告警规则所在行“更多”列的“修改”按钮；
     -   在“告警规则”界面，选择待修改告警规则名称，进入告警规则详情页面，单击右上角“修改”。
 
 5.  在弹出的“修改告警规则”对话框中修改告警规则配置参数，如[表1](#table1142844371817)所示。
@@ -52,7 +52,7 @@
     <tr id="row10276142432414"><td class="cellrowborder" valign="top" headers="mcps1.2.5.1.1 "><p id="p124541643191813"><a name="p124541643191813"></a><a name="p124541643191813"></a>告警策略</p>
     </td>
     <td class="cellrowborder" valign="top" headers="mcps1.2.5.1.1 "><p id="p1445519439188"><a name="p1445519439188"></a><a name="p1445519439188"></a>触发告警规则的告警策略。</p>
-    <p id="p1045534319188"><a name="p1045534319188"></a><a name="p1045534319188"></a>例如：CPU使用率，监控周期为5分钟，连续三个周期原始值≥80%</p>
+    <p id="p1045534319188"><a name="p1045534319188"></a><a name="p1045534319188"></a>例如：CPU使用率，监控周期为5分钟，连续三个周期平均值≥80%</p>
     </td>
     <td class="cellrowborder" valign="top" headers="mcps1.2.5.1.2 "><p id="p0456134301818"><a name="p0456134301818"></a><a name="p0456134301818"></a>-</p>
     </td>
@@ -60,8 +60,9 @@
     <tr id="row844974321815"><td class="cellrowborder" valign="top" headers="mcps1.2.5.1.1 "><p id="p1045018438182"><a name="p1045018438182"></a><a name="p1045018438182"></a>挂载点</p>
     </td>
     <td class="cellrowborder" valign="top" headers="mcps1.2.5.1.1 "><p id="p1945117436182"><a name="p1945117436182"></a><a name="p1945117436182"></a>当监控指标为细颗粒度的磁盘类监控指标时需配置该参数。</p>
+    <p id="p14173851165613"><a name="p14173851165613"></a><a name="p14173851165613"></a>Windows系统请输入对应的驱动器号，比如C、D或者E等，Linux系统请输入对应的挂载点，比如/dev、/opt等。</p>
     </td>
-    <td class="cellrowborder" valign="top" headers="mcps1.2.5.1.2 "><p id="p10453164311187"><a name="p10453164311187"></a><a name="p10453164311187"></a>/</p>
+    <td class="cellrowborder" valign="top" headers="mcps1.2.5.1.2 "><p id="p10453164311187"><a name="p10453164311187"></a><a name="p10453164311187"></a>/dev</p>
     </td>
     </tr>
     <tr id="row12470143131814"><td class="cellrowborder" valign="top" headers="mcps1.2.5.1.1 "><p id="p6471144313182"><a name="p6471144313182"></a><a name="p6471144313182"></a>告警级别</p>
