--- a/cn.zh-cn/用户指南/自定义监控.md
+++ b/cn.zh-cn/用户指南/自定义监控.md
@@ -13,7 +13,7 @@
     >-   当用户通过API添加监控数据后，云监控界面才会显示自定义监控页签。  
     >-   添加监控数据请参见[添加监控数据（RESTful API）](http://support.huaweicloud.com/api-ces/zh-cn_topic_0032831274.html)、[添加监控数据（Java SDK）](https://support.huaweicloud.com/devg-sdk/zh-cn_topic_0072124679.html)、[添加监控数据（Python SDK）](https://support.huaweicloud.com/devg-sdk/zh-cn_topic_0072126389.html)。  
 
-5.  选择待查看的云服务资源所在行的“查看监控图表”，进入“监控图表”页面。
+5.  选择待查看的云服务资源所在行的“查看监控指标”，进入“监控指标”页面。
 
     在这个页面，用户可以选择页面左上方的时间范围按钮，查看该云服务资源“近1小时”、“近3小时”和“近12小时”的监控原始数据曲线图，同时监控指标视图右上角会动态显示对应时段内监控指标的最大值与最小值。
 
