--- a/cn.zh-cn/用户指南/自定义进程监控.md
+++ b/cn.zh-cn/用户指南/自定义进程监控.md
@@ -21,7 +21,7 @@
 2.  单击“管理与部署 \> 云监控”。
 3.  单击页面左侧的“主机监控”，进入“主机监控”页面。
 4.  在“主机监控”页面，单击资源所在行的“监控状态”开关，开启“操作系统监控”功能。
-5.  单击资源所在行的“查看监控图表”，进入“操作系统监控”页面。
+5.  单击资源所在行的“查看监控指标”，进入“操作系统监控”页面。
 6.  单击“操作系统监控”右侧的“进程监控”，进入“进程监控”页面。
 7.  在“进程监控”页面，单击自定义进程数右侧的“配置”，进入“操作系统监控配置自定义进程监控”页面，根据页面提示配置参数，如[图1](#fig1191910596285)所示。
 
