--- a/cn.zh-cn/用户指南/主机监控.md
+++ b/cn.zh-cn/用户指南/主机监控.md
@@ -18,7 +18,7 @@
 
 -   **[安装GPU指标与RAID指标采集插件（Linux）](安装GPU指标与RAID指标采集插件（Linux）.md)**  
 
--   **[查看监控图表](查看监控图表.md)**  
+-   **[查看监控指标](查看监控指标.md)**  
 
 -   **[创建告警规则](创建告警规则.md)**  
 
