--- a/cn.zh-cn/用户指南/事件监控支持的操作事件说明.md
+++ b/cn.zh-cn/用户指南/事件监控支持的操作事件说明.md
@@ -491,7 +491,7 @@
 </td>
 <td class="cellrowborder" valign="top" width="47.36%" headers="mcps1.2.4.1.2 "><p id="p1517816812238"><a name="p1517816812238"></a><a name="p1517816812238"></a>agent心跳数据中断事件</p>
 </td>
-<td class="cellrowborder" valign="top" width="32.9%" headers="mcps1.2.4.1.3 "><p id="p141851784237"><a name="p141851784237"></a><a name="p141851784237"></a>重要</p>
+<td class="cellrowborder" valign="top" width="32.9%" headers="mcps1.2.4.1.3 "><p id="p141851784237"><a name="p141851784237"></a><a name="p141851784237"></a>次要</p>
 </td>
 </tr>
 </tbody>
