--- a/cn.zh-cn/用户指南/云搜索服务的监控指标.md
+++ b/cn.zh-cn/用户指南/云搜索服务的监控指标.md
@@ -39,6 +39,256 @@
 <td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.6.1.5 "><p id="p181528592546"><a name="p181528592546"></a><a name="p181528592546"></a>1分钟</p>
 </td>
 </tr>
+<tr id="row119675211459"><td class="cellrowborder" valign="top" width="11.881188118811881%" headers="mcps1.2.6.1.1 "><p id="p7613124214273"><a name="p7613124214273"></a><a name="p7613124214273"></a>最大JVM堆使用率</p>
+</td>
+<td class="cellrowborder" valign="top" width="37.62376237623762%" headers="mcps1.2.6.1.2 "><p id="p66130426270"><a name="p66130426270"></a><a name="p66130426270"></a>CSS集群节点中最大的JVM堆使用率。</p>
+<p id="p68041457183810"><a name="p68041457183810"></a><a name="p68041457183810"></a>单位：百分比。</p>
+</td>
+<td class="cellrowborder" valign="top" width="19.801980198019802%" headers="mcps1.2.6.1.3 "><p id="p1161334215277"><a name="p1161334215277"></a><a name="p1161334215277"></a>0-100%</p>
+</td>
+<td class="cellrowborder" valign="top" width="14.85148514851485%" headers="mcps1.2.6.1.4 "><p id="p66091553572"><a name="p66091553572"></a><a name="p66091553572"></a>CSS集群</p>
+</td>
+<td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.6.1.5 "><p id="p1240171404511"><a name="p1240171404511"></a><a name="p1240171404511"></a>1分钟</p>
+</td>
+</tr>
+<tr id="row1696717264510"><td class="cellrowborder" valign="top" width="11.881188118811881%" headers="mcps1.2.6.1.1 "><p id="p067185772718"><a name="p067185772718"></a><a name="p067185772718"></a>最大JVM Young GC耗时</p>
+</td>
+<td class="cellrowborder" valign="top" width="37.62376237623762%" headers="mcps1.2.6.1.2 "><p id="p1671115713277"><a name="p1671115713277"></a><a name="p1671115713277"></a>CSS集群节点中最大的JVM Young GC耗时。</p>
+<p id="p1899801133918"><a name="p1899801133918"></a><a name="p1899801133918"></a>单位：ms</p>
+</td>
+<td class="cellrowborder" valign="top" width="19.801980198019802%" headers="mcps1.2.6.1.3 "><p id="p46714578271"><a name="p46714578271"></a><a name="p46714578271"></a>≥ 0 ms</p>
+</td>
+<td class="cellrowborder" valign="top" width="14.85148514851485%" headers="mcps1.2.6.1.4 "><p id="p12612155535718"><a name="p12612155535718"></a><a name="p12612155535718"></a>CSS集群</p>
+</td>
+<td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.6.1.5 "><p id="p1340401494510"><a name="p1340401494510"></a><a name="p1340401494510"></a>1分钟</p>
+</td>
+</tr>
+<tr id="row1396720218452"><td class="cellrowborder" valign="top" width="11.881188118811881%" headers="mcps1.2.6.1.1 "><p id="p7708612282"><a name="p7708612282"></a><a name="p7708612282"></a>最大JVM Young GC次数</p>
+</td>
+<td class="cellrowborder" valign="top" width="37.62376237623762%" headers="mcps1.2.6.1.2 "><p id="p137081814282"><a name="p137081814282"></a><a name="p137081814282"></a>CSS集群节点中最大的JVM Young GC次数。</p>
+</td>
+<td class="cellrowborder" valign="top" width="19.801980198019802%" headers="mcps1.2.6.1.3 "><p id="p137087152818"><a name="p137087152818"></a><a name="p137087152818"></a>≥ 0</p>
+</td>
+<td class="cellrowborder" valign="top" width="14.85148514851485%" headers="mcps1.2.6.1.4 "><p id="p183806581576"><a name="p183806581576"></a><a name="p183806581576"></a>CSS集群</p>
+</td>
+<td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.6.1.5 "><p id="p758581684513"><a name="p758581684513"></a><a name="p758581684513"></a>1分钟</p>
+</td>
+</tr>
+<tr id="row996513219453"><td class="cellrowborder" valign="top" width="11.881188118811881%" headers="mcps1.2.6.1.1 "><p id="p1971811592275"><a name="p1971811592275"></a><a name="p1971811592275"></a>最大JVM Old GC耗时</p>
+</td>
+<td class="cellrowborder" valign="top" width="37.62376237623762%" headers="mcps1.2.6.1.2 "><p id="p871875913277"><a name="p871875913277"></a><a name="p871875913277"></a>CSS集群节点中最大的JVM Old GC耗时。</p>
+<p id="p1245410596394"><a name="p1245410596394"></a><a name="p1245410596394"></a>单位：ms</p>
+</td>
+<td class="cellrowborder" valign="top" width="19.801980198019802%" headers="mcps1.2.6.1.3 "><p id="p13718185912274"><a name="p13718185912274"></a><a name="p13718185912274"></a>≥ 0 ms</p>
+</td>
+<td class="cellrowborder" valign="top" width="14.85148514851485%" headers="mcps1.2.6.1.4 "><p id="p123851558145718"><a name="p123851558145718"></a><a name="p123851558145718"></a>CSS集群</p>
+</td>
+<td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.6.1.5 "><p id="p165891216204519"><a name="p165891216204519"></a><a name="p165891216204519"></a>1分钟</p>
+</td>
+</tr>
+<tr id="row109650254518"><td class="cellrowborder" valign="top" width="11.881188118811881%" headers="mcps1.2.6.1.1 "><p id="p86561255162711"><a name="p86561255162711"></a><a name="p86561255162711"></a>最大JVM Old GC次数</p>
+</td>
+<td class="cellrowborder" valign="top" width="37.62376237623762%" headers="mcps1.2.6.1.2 "><p id="p86561955192718"><a name="p86561955192718"></a><a name="p86561955192718"></a>CSS集群节点中最大的JVM Old GC次数。</p>
+</td>
+<td class="cellrowborder" valign="top" width="19.801980198019802%" headers="mcps1.2.6.1.3 "><p id="p2065645552712"><a name="p2065645552712"></a><a name="p2065645552712"></a>≥ 0</p>
+</td>
+<td class="cellrowborder" valign="top" width="14.85148514851485%" headers="mcps1.2.6.1.4 "><p id="p6388958165710"><a name="p6388958165710"></a><a name="p6388958165710"></a>CSS集群</p>
+</td>
+<td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.6.1.5 "><p id="p15914162457"><a name="p15914162457"></a><a name="p15914162457"></a>1分钟</p>
+</td>
+</tr>
+<tr id="row1196592104514"><td class="cellrowborder" valign="top" width="11.881188118811881%" headers="mcps1.2.6.1.1 "><p id="p144774712714"><a name="p144774712714"></a><a name="p144774712714"></a>文件系统总大小</p>
+</td>
+<td class="cellrowborder" valign="top" width="37.62376237623762%" headers="mcps1.2.6.1.2 "><p id="p244711478272"><a name="p244711478272"></a><a name="p244711478272"></a>CSS集群的文件系统总大小。</p>
+<p id="p1265512359418"><a name="p1265512359418"></a><a name="p1265512359418"></a>单位：byte</p>
+</td>
+<td class="cellrowborder" valign="top" width="19.801980198019802%" headers="mcps1.2.6.1.3 "><p id="p544719474271"><a name="p544719474271"></a><a name="p544719474271"></a>≥ 0 bytes</p>
+</td>
+<td class="cellrowborder" valign="top" width="14.85148514851485%" headers="mcps1.2.6.1.4 "><p id="p3391195895717"><a name="p3391195895717"></a><a name="p3391195895717"></a>CSS集群</p>
+</td>
+<td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.6.1.5 "><p id="p75955166450"><a name="p75955166450"></a><a name="p75955166450"></a>1分钟</p>
+</td>
+</tr>
+<tr id="row13965132194514"><td class="cellrowborder" valign="top" width="11.881188118811881%" headers="mcps1.2.6.1.1 "><p id="p7863174942712"><a name="p7863174942712"></a><a name="p7863174942712"></a>文件系统可用大小</p>
+</td>
+<td class="cellrowborder" valign="top" width="37.62376237623762%" headers="mcps1.2.6.1.2 "><p id="p58636490274"><a name="p58636490274"></a><a name="p58636490274"></a>CSS集群的文件系统可用大小。</p>
+<p id="p1116121174216"><a name="p1116121174216"></a><a name="p1116121174216"></a>单位：byte</p>
+</td>
+<td class="cellrowborder" valign="top" width="19.801980198019802%" headers="mcps1.2.6.1.3 "><p id="p068210315425"><a name="p068210315425"></a><a name="p068210315425"></a>≥ 0 bytes</p>
+</td>
+<td class="cellrowborder" valign="top" width="14.85148514851485%" headers="mcps1.2.6.1.4 "><p id="p5676203155810"><a name="p5676203155810"></a><a name="p5676203155810"></a>CSS集群</p>
+</td>
+<td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.6.1.5 "><p id="p1979141904514"><a name="p1979141904514"></a><a name="p1979141904514"></a>1分钟</p>
+</td>
+</tr>
+<tr id="row7965162174512"><td class="cellrowborder" valign="top" width="11.881188118811881%" headers="mcps1.2.6.1.1 "><p id="p3726459277"><a name="p3726459277"></a><a name="p3726459277"></a>最大CPU利用率</p>
+</td>
+<td class="cellrowborder" valign="top" width="37.62376237623762%" headers="mcps1.2.6.1.2 "><p id="p187294572719"><a name="p187294572719"></a><a name="p187294572719"></a>CSS集群节点中最大的CPU利用率。</p>
+<p id="p312417121420"><a name="p312417121420"></a><a name="p312417121420"></a>单位：百分比</p>
+</td>
+<td class="cellrowborder" valign="top" width="19.801980198019802%" headers="mcps1.2.6.1.3 "><p id="p372745132716"><a name="p372745132716"></a><a name="p372745132716"></a>0-100%</p>
+</td>
+<td class="cellrowborder" valign="top" width="14.85148514851485%" headers="mcps1.2.6.1.4 "><p id="p5681163135817"><a name="p5681163135817"></a><a name="p5681163135817"></a>CSS集群</p>
+</td>
+<td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.6.1.5 "><p id="p2981131911457"><a name="p2981131911457"></a><a name="p2981131911457"></a>1分钟</p>
+</td>
+</tr>
+<tr id="row29651721457"><td class="cellrowborder" valign="top" width="11.881188118811881%" headers="mcps1.2.6.1.1 "><p id="p1147619534321"><a name="p1147619534321"></a><a name="p1147619534321"></a>最大JVM进程使用的CPU时间</p>
+</td>
+<td class="cellrowborder" valign="top" width="37.62376237623762%" headers="mcps1.2.6.1.2 "><p id="p1447625333216"><a name="p1447625333216"></a><a name="p1447625333216"></a>CSS集群节点中最大的JVM进程使用的CPU时间。</p>
+<p id="p1184414323423"><a name="p1184414323423"></a><a name="p1184414323423"></a>单位：ms</p>
+</td>
+<td class="cellrowborder" valign="top" width="19.801980198019802%" headers="mcps1.2.6.1.3 "><p id="p1547611536324"><a name="p1547611536324"></a><a name="p1547611536324"></a>≥ 0 ms</p>
+</td>
+<td class="cellrowborder" valign="top" width="14.85148514851485%" headers="mcps1.2.6.1.4 "><p id="p116835395812"><a name="p116835395812"></a><a name="p116835395812"></a>CSS集群</p>
+</td>
+<td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.6.1.5 "><p id="p12983201984518"><a name="p12983201984518"></a><a name="p12983201984518"></a>1分钟</p>
+</td>
+</tr>
+<tr id="row996512211450"><td class="cellrowborder" valign="top" width="11.881188118811881%" headers="mcps1.2.6.1.1 "><p id="p028565511327"><a name="p028565511327"></a><a name="p028565511327"></a>最大JVM进程使用的虚拟内存大小</p>
+</td>
+<td class="cellrowborder" valign="top" width="37.62376237623762%" headers="mcps1.2.6.1.2 "><p id="p62851255123213"><a name="p62851255123213"></a><a name="p62851255123213"></a>CSS集群节点中最大的JVM进程使用的虚拟内存大小。</p>
+<p id="p19974657134215"><a name="p19974657134215"></a><a name="p19974657134215"></a>单位：byte</p>
+</td>
+<td class="cellrowborder" valign="top" width="19.801980198019802%" headers="mcps1.2.6.1.3 "><p id="p028515552324"><a name="p028515552324"></a><a name="p028515552324"></a>≥ 0 bytes</p>
+</td>
+<td class="cellrowborder" valign="top" width="14.85148514851485%" headers="mcps1.2.6.1.4 "><p id="p468753165815"><a name="p468753165815"></a><a name="p468753165815"></a>CSS集群</p>
+</td>
+<td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.6.1.5 "><p id="p698511974514"><a name="p698511974514"></a><a name="p698511974514"></a>1分钟</p>
+</td>
+</tr>
+<tr id="row2965152124511"><td class="cellrowborder" valign="top" width="11.881188118811881%" headers="mcps1.2.6.1.1 "><p id="p717095711328"><a name="p717095711328"></a><a name="p717095711328"></a>最大当前打开的Http连接数</p>
+</td>
+<td class="cellrowborder" valign="top" width="37.62376237623762%" headers="mcps1.2.6.1.2 "><p id="p181701757163211"><a name="p181701757163211"></a><a name="p181701757163211"></a>CSS集群节点中最大的当前打开的Http连接数。</p>
+</td>
+<td class="cellrowborder" valign="top" width="19.801980198019802%" headers="mcps1.2.6.1.3 "><p id="p1217025715329"><a name="p1217025715329"></a><a name="p1217025715329"></a>≥ 0</p>
+</td>
+<td class="cellrowborder" valign="top" width="14.85148514851485%" headers="mcps1.2.6.1.4 "><p id="p136909310582"><a name="p136909310582"></a><a name="p136909310582"></a>CSS集群</p>
+</td>
+<td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.6.1.5 "><p id="p12987131924516"><a name="p12987131924516"></a><a name="p12987131924516"></a>1分钟</p>
+</td>
+</tr>
+<tr id="row69651229458"><td class="cellrowborder" valign="top" width="11.881188118811881%" headers="mcps1.2.6.1.1 "><p id="p5206551103212"><a name="p5206551103212"></a><a name="p5206551103212"></a>最大全部打开的Http连接数</p>
+</td>
+<td class="cellrowborder" valign="top" width="37.62376237623762%" headers="mcps1.2.6.1.2 "><p id="p14206175173215"><a name="p14206175173215"></a><a name="p14206175173215"></a>CSS集群节点中最大的全部打开的Http连接数。</p>
+</td>
+<td class="cellrowborder" valign="top" width="19.801980198019802%" headers="mcps1.2.6.1.3 "><p id="p92061251183213"><a name="p92061251183213"></a><a name="p92061251183213"></a>≥ 0</p>
+</td>
+<td class="cellrowborder" valign="top" width="14.85148514851485%" headers="mcps1.2.6.1.4 "><p id="p9692837581"><a name="p9692837581"></a><a name="p9692837581"></a>CSS集群</p>
+</td>
+<td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.6.1.5 "><p id="p11991161974515"><a name="p11991161974515"></a><a name="p11991161974515"></a>1分钟</p>
+</td>
+</tr>
+<tr id="row209659211459"><td class="cellrowborder" valign="top" width="11.881188118811881%" headers="mcps1.2.6.1.1 "><p id="p1252911543311"><a name="p1252911543311"></a><a name="p1252911543311"></a>索引数量</p>
+</td>
+<td class="cellrowborder" valign="top" width="37.62376237623762%" headers="mcps1.2.6.1.2 "><p id="p155301353338"><a name="p155301353338"></a><a name="p155301353338"></a>CSS集群的索引数量。</p>
+</td>
+<td class="cellrowborder" valign="top" width="19.801980198019802%" headers="mcps1.2.6.1.3 "><p id="p1679917620612"><a name="p1679917620612"></a><a name="p1679917620612"></a>≥ 0</p>
+</td>
+<td class="cellrowborder" valign="top" width="14.85148514851485%" headers="mcps1.2.6.1.4 "><p id="p769563115818"><a name="p769563115818"></a><a name="p769563115818"></a>CSS集群</p>
+</td>
+<td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.6.1.5 "><p id="p59932193459"><a name="p59932193459"></a><a name="p59932193459"></a>1分钟</p>
+</td>
+</tr>
+<tr id="row696515218451"><td class="cellrowborder" valign="top" width="11.881188118811881%" headers="mcps1.2.6.1.1 "><p id="p853955183314"><a name="p853955183314"></a><a name="p853955183314"></a>分片数量</p>
+</td>
+<td class="cellrowborder" valign="top" width="37.62376237623762%" headers="mcps1.2.6.1.2 "><p id="p135417583317"><a name="p135417583317"></a><a name="p135417583317"></a>CSS集群的分片数量。</p>
+</td>
+<td class="cellrowborder" valign="top" width="19.801980198019802%" headers="mcps1.2.6.1.3 "><p id="p38031769617"><a name="p38031769617"></a><a name="p38031769617"></a>≥ 0</p>
+</td>
+<td class="cellrowborder" valign="top" width="14.85148514851485%" headers="mcps1.2.6.1.4 "><p id="p86993313584"><a name="p86993313584"></a><a name="p86993313584"></a>CSS集群</p>
+</td>
+<td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.6.1.5 "><p id="p11996101914515"><a name="p11996101914515"></a><a name="p11996101914515"></a>1分钟</p>
+</td>
+</tr>
+<tr id="row13965162144514"><td class="cellrowborder" valign="top" width="11.881188118811881%" headers="mcps1.2.6.1.1 "><p id="p6547185113310"><a name="p6547185113310"></a><a name="p6547185113310"></a>主分片数量</p>
+</td>
+<td class="cellrowborder" valign="top" width="37.62376237623762%" headers="mcps1.2.6.1.2 "><p id="p6548195183316"><a name="p6548195183316"></a><a name="p6548195183316"></a>CSS集群的主分片数量。</p>
+</td>
+<td class="cellrowborder" valign="top" width="19.801980198019802%" headers="mcps1.2.6.1.3 "><p id="p1022401313612"><a name="p1022401313612"></a><a name="p1022401313612"></a>≥ 0</p>
+</td>
+<td class="cellrowborder" valign="top" width="14.85148514851485%" headers="mcps1.2.6.1.4 "><p id="p15873459584"><a name="p15873459584"></a><a name="p15873459584"></a>CSS集群</p>
+</td>
+<td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.6.1.5 "><p id="p7985172118454"><a name="p7985172118454"></a><a name="p7985172118454"></a>1分钟</p>
+</td>
+</tr>
+<tr id="row7965202154519"><td class="cellrowborder" valign="top" width="11.881188118811881%" headers="mcps1.2.6.1.1 "><p id="p655414523318"><a name="p655414523318"></a><a name="p655414523318"></a>文档数量</p>
+</td>
+<td class="cellrowborder" valign="top" width="37.62376237623762%" headers="mcps1.2.6.1.2 "><p id="p1155416523317"><a name="p1155416523317"></a><a name="p1155416523317"></a>CSS集群的文档数量。</p>
+</td>
+<td class="cellrowborder" valign="top" width="19.801980198019802%" headers="mcps1.2.6.1.3 "><p id="p32284139613"><a name="p32284139613"></a><a name="p32284139613"></a>≥ 0</p>
+</td>
+<td class="cellrowborder" valign="top" width="14.85148514851485%" headers="mcps1.2.6.1.4 "><p id="p13875135125815"><a name="p13875135125815"></a><a name="p13875135125815"></a>CSS集群</p>
+</td>
+<td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.6.1.5 "><p id="p1398822115451"><a name="p1398822115451"></a><a name="p1398822115451"></a>1分钟</p>
+</td>
+</tr>
+<tr id="row296520294517"><td class="cellrowborder" valign="top" width="11.881188118811881%" headers="mcps1.2.6.1.1 "><p id="p1477175123413"><a name="p1477175123413"></a><a name="p1477175123413"></a>被删除的文档数量</p>
+</td>
+<td class="cellrowborder" valign="top" width="37.62376237623762%" headers="mcps1.2.6.1.2 "><p id="p1678151173412"><a name="p1678151173412"></a><a name="p1678151173412"></a>CSS集群的被删除的文档数量。</p>
+</td>
+<td class="cellrowborder" valign="top" width="19.801980198019802%" headers="mcps1.2.6.1.3 "><p id="p623011310616"><a name="p623011310616"></a><a name="p623011310616"></a>≥ 0</p>
+</td>
+<td class="cellrowborder" valign="top" width="14.85148514851485%" headers="mcps1.2.6.1.4 "><p id="p287725175819"><a name="p287725175819"></a><a name="p287725175819"></a>CSS集群</p>
+</td>
+<td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.6.1.5 "><p id="p1399072124510"><a name="p1399072124510"></a><a name="p1399072124510"></a>1分钟</p>
+</td>
+</tr>
+<tr id="row139658216455"><td class="cellrowborder" valign="top" width="11.881188118811881%" headers="mcps1.2.6.1.1 "><p id="p384105173410"><a name="p384105173410"></a><a name="p384105173410"></a>节点数量</p>
+</td>
+<td class="cellrowborder" valign="top" width="37.62376237623762%" headers="mcps1.2.6.1.2 "><p id="p2851151153410"><a name="p2851151153410"></a><a name="p2851151153410"></a>CSS集群的节点数量。</p>
+</td>
+<td class="cellrowborder" valign="top" width="19.801980198019802%" headers="mcps1.2.6.1.3 "><p id="p1232131314616"><a name="p1232131314616"></a><a name="p1232131314616"></a>≥ 0</p>
+</td>
+<td class="cellrowborder" valign="top" width="14.85148514851485%" headers="mcps1.2.6.1.4 "><p id="p1588012512589"><a name="p1588012512589"></a><a name="p1588012512589"></a>CSS集群</p>
+</td>
+<td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.6.1.5 "><p id="p179941217456"><a name="p179941217456"></a><a name="p179941217456"></a>1分钟</p>
+</td>
+</tr>
+<tr id="row696512212453"><td class="cellrowborder" valign="top" width="11.881188118811881%" headers="mcps1.2.6.1.1 "><p id="p418012529340"><a name="p418012529340"></a><a name="p418012529340"></a>数据节点数量</p>
+</td>
+<td class="cellrowborder" valign="top" width="37.62376237623762%" headers="mcps1.2.6.1.2 "><p id="p018285243413"><a name="p018285243413"></a><a name="p018285243413"></a>CSS集群的数据节点数量。</p>
+</td>
+<td class="cellrowborder" valign="top" width="19.801980198019802%" headers="mcps1.2.6.1.3 "><p id="p144197151666"><a name="p144197151666"></a><a name="p144197151666"></a>≥ 0</p>
+</td>
+<td class="cellrowborder" valign="top" width="14.85148514851485%" headers="mcps1.2.6.1.4 "><p id="p98838595814"><a name="p98838595814"></a><a name="p98838595814"></a>CSS集群</p>
+</td>
+<td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.6.1.5 "><p id="p1799912116450"><a name="p1799912116450"></a><a name="p1799912116450"></a>1分钟</p>
+</td>
+</tr>
+<tr id="row179650211457"><td class="cellrowborder" valign="top" width="11.881188118811881%" headers="mcps1.2.6.1.1 "><p id="p1219075283416"><a name="p1219075283416"></a><a name="p1219075283416"></a>协调节点数量</p>
+</td>
+<td class="cellrowborder" valign="top" width="37.62376237623762%" headers="mcps1.2.6.1.2 "><p id="p141926522347"><a name="p141926522347"></a><a name="p141926522347"></a>CSS集群的协调节点数量。</p>
+</td>
+<td class="cellrowborder" valign="top" width="19.801980198019802%" headers="mcps1.2.6.1.3 "><p id="p1842311158612"><a name="p1842311158612"></a><a name="p1842311158612"></a>≥ 0</p>
+</td>
+<td class="cellrowborder" valign="top" width="14.85148514851485%" headers="mcps1.2.6.1.4 "><p id="p0886757587"><a name="p0886757587"></a><a name="p0886757587"></a>CSS集群</p>
+</td>
+<td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.6.1.5 "><p id="p1411022184513"><a name="p1411022184513"></a><a name="p1411022184513"></a>1分钟</p>
+</td>
+</tr>
+<tr id="row396511234519"><td class="cellrowborder" valign="top" width="11.881188118811881%" headers="mcps1.2.6.1.1 "><p id="p171612376351"><a name="p171612376351"></a><a name="p171612376351"></a>Master节点数量</p>
+</td>
+<td class="cellrowborder" valign="top" width="37.62376237623762%" headers="mcps1.2.6.1.2 "><p id="p191631337173516"><a name="p191631337173516"></a><a name="p191631337173516"></a>CSS集群的Master节点数量。</p>
+</td>
+<td class="cellrowborder" valign="top" width="19.801980198019802%" headers="mcps1.2.6.1.3 "><p id="p1742720153619"><a name="p1742720153619"></a><a name="p1742720153619"></a>≥ 0</p>
+</td>
+<td class="cellrowborder" valign="top" width="14.85148514851485%" headers="mcps1.2.6.1.4 "><p id="p888917585819"><a name="p888917585819"></a><a name="p888917585819"></a>CSS集群</p>
+</td>
+<td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.6.1.5 "><p id="p195122264510"><a name="p195122264510"></a><a name="p195122264510"></a>1分钟</p>
+</td>
+</tr>
+<tr id="row396411244519"><td class="cellrowborder" valign="top" width="11.881188118811881%" headers="mcps1.2.6.1.1 "><p id="p9172203773513"><a name="p9172203773513"></a><a name="p9172203773513"></a>Client节点数量</p>
+</td>
+<td class="cellrowborder" valign="top" width="37.62376237623762%" headers="mcps1.2.6.1.2 "><p id="p1717443773517"><a name="p1717443773517"></a><a name="p1717443773517"></a>CSS集群的Client节点数量。</p>
+</td>
+<td class="cellrowborder" valign="top" width="19.801980198019802%" headers="mcps1.2.6.1.3 "><p id="p143013151465"><a name="p143013151465"></a><a name="p143013151465"></a>≥ 0</p>
+</td>
+<td class="cellrowborder" valign="top" width="14.85148514851485%" headers="mcps1.2.6.1.4 "><p id="p889111519583"><a name="p889111519583"></a><a name="p889111519583"></a>CSS集群</p>
+</td>
+<td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.6.1.5 "><p id="p38112211457"><a name="p38112211457"></a><a name="p38112211457"></a>1分钟</p>
+</td>
+</tr>
 </tbody>
 </table>
 
