--- a/cn.zh-cn/用户指南/停用站点监控.md
+++ b/cn.zh-cn/用户指南/停用站点监控.md
@@ -1,4 +1,4 @@
 # 停用站点监控<a name="ZH-CN_TOPIC_0090332138"></a>
 
-在“站点监控”界面，单击站点所在行的“更多”列的“停用”，在弹出的“停用”界面，单击“确定”，可以停用站点监控。
+在“站点监控”界面，单击站点所在行的“更多”列的“停用站点监控”，在弹出的“停用站点监控”界面，单击“是”，可以停用站点监控。
 
