--- a/cn.zh-cn/API参考/附录.md
+++ b/cn.zh-cn/API参考/附录.md
@@ -14,7 +14,7 @@
 
 -   **[弹性文件服务监控指标说明](弹性文件服务监控指标说明.md)**  
 
--   **[虚拟私有云监控指标说明](虚拟私有云监控指标说明.md)**  
+-   **[弹性公网IP和带宽监控指标说明](弹性公网IP和带宽监控指标说明.md)**  
 
 -   **[弹性负载均衡监控指标说明](弹性负载均衡监控指标说明.md)**  
 
