--- a/cn.zh-cn/用户指南/创建命令.md
+++ b/cn.zh-cn/用户指南/创建命令.md
@@ -10,7 +10,7 @@
 2.  单击“管理与部署 \> 云监控服务 \> 云助手”。
 3.  在“云助手”界面，单击左上角“新建命令”。
 4.  在弹出的“新建命令”对话框中根据界面提示配置参数，如[图1](#fig12772151411299)所示。
-    -   命令名称：输入命令的名称，如ls。
+    -   名称：输入命令的名称，如ls。
     -   命令描述：输入命令的描述，自定义，如ls。
     -   命令类型：云助手现阶段仅支持Shell类型的命令，其他类型正在开发中。
     -   命令内容：编辑您要执行的命令内容，可参考如下命令示例。
