--- a/cn.zh-cn/用户指南/弹性云服务器中操作系统监控的监控指标.md
+++ b/cn.zh-cn/用户指南/弹性云服务器中操作系统监控的监控指标.md
@@ -1,6 +1,6 @@
 # 弹性云服务器中操作系统监控的监控指标<a name="ZH-CN_TOPIC_0084814075"></a>
 
-操作系统监控目前支持监控的监控指标有：CPU相关监控项、CPU负载类相关监控项、内存相关监控项、磁盘相关监控项、磁盘I/O相关监控项、文件系统类相关监控项、网卡类相关监控项、GPU相关监控项。
+操作系统监控目前支持监控的监控指标有：CPU相关监控项、CPU负载类相关监控项、内存相关监控项、磁盘相关监控项、磁盘I/O相关监控项、文件系统类相关监控项、GPU相关监控项、网卡类相关监控项。
 
 **表 1**  CPU相关监控指标说明
 
