--- a/cn.zh-cn/用户指南/弹性云服务器的监控指标.md
+++ b/cn.zh-cn/用户指南/弹性云服务器的监控指标.md
@@ -1,5 +1,7 @@
 # 弹性云服务器的监控指标<a name="ZH-CN_TOPIC_0084572206"></a>
 
+对于不同的操作系统、不同的弹性云服务器类型，支持的监控指标有所差异，具体如[表1](#table19047316191052)所示。其中，√表示支持，×表示不支持。
+
 **表 1**  弹性云服务器监控指标支持列表
 
 <a name="table19047316191052"></a>
@@ -11,9 +13,9 @@
 </th>
 </tr>
 </thead>
-<tbody><tr id="row1758616235611"><td class="cellrowborder" valign="top" width="16.161616161616163%" headers="mcps1.2.6.1.1 "><p id="p1758762115618"><a name="p1758762115618"></a><a name="p1758762115618"></a>-</p>
+<tbody><tr id="row1758616235611"><td class="cellrowborder" valign="top" width="16.393939393939394%" headers="mcps1.2.6.1.1 "><p id="p1758762115618"><a name="p1758762115618"></a><a name="p1758762115618"></a>-</p>
 </td>
-<td class="cellrowborder" valign="top" width="20.202020202020204%" headers="mcps1.2.6.1.2 "><p id="p1288111533217"><a name="p1288111533217"></a><a name="p1288111533217"></a>虚拟化类型为XEN的弹性云服务器</p>
+<td class="cellrowborder" valign="top" width="19.96969696969697%" headers="mcps1.2.6.1.2 "><p id="p1288111533217"><a name="p1288111533217"></a><a name="p1288111533217"></a>虚拟化类型为XEN的弹性云服务器</p>
 </td>
 <td class="cellrowborder" valign="top" width="18.181818181818183%" headers="mcps1.2.6.1.2 "><p id="p6206173612307"><a name="p6206173612307"></a><a name="p6206173612307"></a>虚拟化类型为KVM的弹性云服务器</p>
 </td>
@@ -22,9 +24,9 @@
 <td class="cellrowborder" valign="top" width="23.232323232323235%" headers="mcps1.2.6.1.3 "><p id="p1842315912586"><a name="p1842315912586"></a><a name="p1842315912586"></a>虚拟化类型为KVM的弹性云服务器</p>
 </td>
 </tr>
-<tr id="row53512049191052"><td class="cellrowborder" valign="top" width="16.161616161616163%" headers="mcps1.2.6.1.1 "><p id="p39508675191052"><a name="p39508675191052"></a><a name="p39508675191052"></a>CPU使用率</p>
+<tr id="row53512049191052"><td class="cellrowborder" valign="top" width="16.393939393939394%" headers="mcps1.2.6.1.1 "><p id="p39508675191052"><a name="p39508675191052"></a><a name="p39508675191052"></a>CPU使用率</p>
 </td>
-<td class="cellrowborder" valign="top" width="20.202020202020204%" headers="mcps1.2.6.1.2 "><p id="p41988430191052"><a name="p41988430191052"></a><a name="p41988430191052"></a>√</p>
+<td class="cellrowborder" valign="top" width="19.96969696969697%" headers="mcps1.2.6.1.2 "><p id="p41988430191052"><a name="p41988430191052"></a><a name="p41988430191052"></a>√</p>
 </td>
 <td class="cellrowborder" valign="top" width="18.181818181818183%" headers="mcps1.2.6.1.2 "><p id="p10220193713585"><a name="p10220193713585"></a><a name="p10220193713585"></a>√</p>
 </td>
@@ -33,9 +35,9 @@
 <td class="cellrowborder" valign="top" width="23.232323232323235%" headers="mcps1.2.6.1.3 "><p id="p290319599134"><a name="p290319599134"></a><a name="p290319599134"></a>√</p>
 </td>
 </tr>
-<tr id="row37852229191052"><td class="cellrowborder" valign="top" width="16.161616161616163%" headers="mcps1.2.6.1.1 "><p id="p46131736191052"><a name="p46131736191052"></a><a name="p46131736191052"></a>内存使用率</p>
+<tr id="row37852229191052"><td class="cellrowborder" valign="top" width="16.393939393939394%" headers="mcps1.2.6.1.1 "><p id="p46131736191052"><a name="p46131736191052"></a><a name="p46131736191052"></a>内存使用率</p>
 </td>
-<td class="cellrowborder" valign="top" width="20.202020202020204%" headers="mcps1.2.6.1.2 "><p id="p9344806191052"><a name="p9344806191052"></a><a name="p9344806191052"></a>√</p>
+<td class="cellrowborder" valign="top" width="19.96969696969697%" headers="mcps1.2.6.1.2 "><p id="p9344806191052"><a name="p9344806191052"></a><a name="p9344806191052"></a>√</p>
 </td>
 <td class="cellrowborder" valign="top" width="18.181818181818183%" headers="mcps1.2.6.1.2 "><p id="p19227113715584"><a name="p19227113715584"></a><a name="p19227113715584"></a>√</p>
 </td>
@@ -44,9 +46,9 @@
 <td class="cellrowborder" valign="top" width="23.232323232323235%" headers="mcps1.2.6.1.3 "><p id="p505133739134"><a name="p505133739134"></a><a name="p505133739134"></a>×（暂不支持）</p>
 </td>
 </tr>
-<tr id="row32402093191052"><td class="cellrowborder" valign="top" width="16.161616161616163%" headers="mcps1.2.6.1.1 "><p id="p7323897191052"><a name="p7323897191052"></a><a name="p7323897191052"></a>磁盘使用率</p>
+<tr id="row32402093191052"><td class="cellrowborder" valign="top" width="16.393939393939394%" headers="mcps1.2.6.1.1 "><p id="p7323897191052"><a name="p7323897191052"></a><a name="p7323897191052"></a>磁盘使用率</p>
 </td>
-<td class="cellrowborder" valign="top" width="20.202020202020204%" headers="mcps1.2.6.1.2 "><p id="p2147551191052"><a name="p2147551191052"></a><a name="p2147551191052"></a>√</p>
+<td class="cellrowborder" valign="top" width="19.96969696969697%" headers="mcps1.2.6.1.2 "><p id="p2147551191052"><a name="p2147551191052"></a><a name="p2147551191052"></a>√</p>
 </td>
 <td class="cellrowborder" valign="top" width="18.181818181818183%" headers="mcps1.2.6.1.2 "><p id="p17235037155819"><a name="p17235037155819"></a><a name="p17235037155819"></a>√</p>
 </td>
@@ -55,9 +57,9 @@
 <td class="cellrowborder" valign="top" width="23.232323232323235%" headers="mcps1.2.6.1.3 "><p id="p460094879134"><a name="p460094879134"></a><a name="p460094879134"></a>×（暂不支持）</p>
 </td>
 </tr>
-<tr id="row0819203215594"><td class="cellrowborder" valign="top" width="16.161616161616163%" headers="mcps1.2.6.1.1 "><p id="p10946133195911"><a name="p10946133195911"></a><a name="p10946133195911"></a>磁盘读带宽</p>
+<tr id="row0819203215594"><td class="cellrowborder" valign="top" width="16.393939393939394%" headers="mcps1.2.6.1.1 "><p id="p10946133195911"><a name="p10946133195911"></a><a name="p10946133195911"></a>磁盘读带宽</p>
 </td>
-<td class="cellrowborder" valign="top" width="20.202020202020204%" headers="mcps1.2.6.1.2 "><p id="p19511033165920"><a name="p19511033165920"></a><a name="p19511033165920"></a>√</p>
+<td class="cellrowborder" valign="top" width="19.96969696969697%" headers="mcps1.2.6.1.2 "><p id="p19511033165920"><a name="p19511033165920"></a><a name="p19511033165920"></a>√</p>
 </td>
 <td class="cellrowborder" valign="top" width="18.181818181818183%" headers="mcps1.2.6.1.2 "><p id="p995593345917"><a name="p995593345917"></a><a name="p995593345917"></a>√</p>
 </td>
@@ -66,9 +68,9 @@
 <td class="cellrowborder" valign="top" width="23.232323232323235%" headers="mcps1.2.6.1.3 "><p id="p39611433155914"><a name="p39611433155914"></a><a name="p39611433155914"></a>√</p>
 </td>
 </tr>
-<tr id="row47676435120"><td class="cellrowborder" valign="top" width="16.161616161616163%" headers="mcps1.2.6.1.1 "><p id="p10835744712"><a name="p10835744712"></a><a name="p10835744712"></a>磁盘写带宽</p>
+<tr id="row47676435120"><td class="cellrowborder" valign="top" width="16.393939393939394%" headers="mcps1.2.6.1.1 "><p id="p10835744712"><a name="p10835744712"></a><a name="p10835744712"></a>磁盘写带宽</p>
 </td>
-<td class="cellrowborder" valign="top" width="20.202020202020204%" headers="mcps1.2.6.1.2 "><p id="p1984016444115"><a name="p1984016444115"></a><a name="p1984016444115"></a>√</p>
+<td class="cellrowborder" valign="top" width="19.96969696969697%" headers="mcps1.2.6.1.2 "><p id="p1984016444115"><a name="p1984016444115"></a><a name="p1984016444115"></a>√</p>
 </td>
 <td class="cellrowborder" valign="top" width="18.181818181818183%" headers="mcps1.2.6.1.2 "><p id="p168431244413"><a name="p168431244413"></a><a name="p168431244413"></a>√</p>
 </td>
@@ -77,9 +79,9 @@
 <td class="cellrowborder" valign="top" width="23.232323232323235%" headers="mcps1.2.6.1.3 "><p id="p1385124410113"><a name="p1385124410113"></a><a name="p1385124410113"></a>√</p>
 </td>
 </tr>
-<tr id="row581210612314"><td class="cellrowborder" valign="top" width="16.161616161616163%" headers="mcps1.2.6.1.1 "><p id="p19768471313"><a name="p19768471313"></a><a name="p19768471313"></a>磁盘读IOPS</p>
+<tr id="row581210612314"><td class="cellrowborder" valign="top" width="16.393939393939394%" headers="mcps1.2.6.1.1 "><p id="p19768471313"><a name="p19768471313"></a><a name="p19768471313"></a>磁盘读IOPS</p>
 </td>
-<td class="cellrowborder" valign="top" width="20.202020202020204%" headers="mcps1.2.6.1.2 "><p id="p137721571734"><a name="p137721571734"></a><a name="p137721571734"></a>√</p>
+<td class="cellrowborder" valign="top" width="19.96969696969697%" headers="mcps1.2.6.1.2 "><p id="p137721571734"><a name="p137721571734"></a><a name="p137721571734"></a>√</p>
 </td>
 <td class="cellrowborder" valign="top" width="18.181818181818183%" headers="mcps1.2.6.1.2 "><p id="p77771271637"><a name="p77771271637"></a><a name="p77771271637"></a>√</p>
 </td>
@@ -88,9 +90,9 @@
 <td class="cellrowborder" valign="top" width="23.232323232323235%" headers="mcps1.2.6.1.3 "><p id="p978447436"><a name="p978447436"></a><a name="p978447436"></a>√</p>
 </td>
 </tr>
-<tr id="row177711722410"><td class="cellrowborder" valign="top" width="16.161616161616163%" headers="mcps1.2.6.1.1 "><p id="p19581031247"><a name="p19581031247"></a><a name="p19581031247"></a>磁盘写操作速率</p>
+<tr id="row177711722410"><td class="cellrowborder" valign="top" width="16.393939393939394%" headers="mcps1.2.6.1.1 "><p id="p19581031247"><a name="p19581031247"></a><a name="p19581031247"></a>磁盘写IOPS</p>
 </td>
-<td class="cellrowborder" valign="top" width="20.202020202020204%" headers="mcps1.2.6.1.2 "><p id="p49632312418"><a name="p49632312418"></a><a name="p49632312418"></a>√</p>
+<td class="cellrowborder" valign="top" width="19.96969696969697%" headers="mcps1.2.6.1.2 "><p id="p49632312418"><a name="p49632312418"></a><a name="p49632312418"></a>√</p>
 </td>
 <td class="cellrowborder" valign="top" width="18.181818181818183%" headers="mcps1.2.6.1.2 "><p id="p1967334417"><a name="p1967334417"></a><a name="p1967334417"></a>√</p>
 </td>
@@ -99,9 +101,9 @@
 <td class="cellrowborder" valign="top" width="23.232323232323235%" headers="mcps1.2.6.1.3 "><p id="p16977637413"><a name="p16977637413"></a><a name="p16977637413"></a>√</p>
 </td>
 </tr>
-<tr id="row35398125191052"><td class="cellrowborder" valign="top" width="16.161616161616163%" headers="mcps1.2.6.1.1 "><p id="p48675856191052"><a name="p48675856191052"></a><a name="p48675856191052"></a>带内网络流入速率</p>
+<tr id="row35398125191052"><td class="cellrowborder" valign="top" width="16.393939393939394%" headers="mcps1.2.6.1.1 "><p id="p48675856191052"><a name="p48675856191052"></a><a name="p48675856191052"></a>带内网络流入速率</p>
 </td>
-<td class="cellrowborder" valign="top" width="20.202020202020204%" headers="mcps1.2.6.1.2 "><p id="p58317239191052"><a name="p58317239191052"></a><a name="p58317239191052"></a>√</p>
+<td class="cellrowborder" valign="top" width="19.96969696969697%" headers="mcps1.2.6.1.2 "><p id="p58317239191052"><a name="p58317239191052"></a><a name="p58317239191052"></a>√</p>
 </td>
 <td class="cellrowborder" valign="top" width="18.181818181818183%" headers="mcps1.2.6.1.2 "><p id="p1726933755812"><a name="p1726933755812"></a><a name="p1726933755812"></a>√</p>
 </td>
@@ -110,9 +112,9 @@
 <td class="cellrowborder" valign="top" width="23.232323232323235%" headers="mcps1.2.6.1.3 "><p id="p263228299134"><a name="p263228299134"></a><a name="p263228299134"></a>×（暂不支持）</p>
 </td>
 </tr>
-<tr id="row17534150191052"><td class="cellrowborder" valign="top" width="16.161616161616163%" headers="mcps1.2.6.1.1 "><p id="p10980079191052"><a name="p10980079191052"></a><a name="p10980079191052"></a>带内网络流出速率</p>
+<tr id="row17534150191052"><td class="cellrowborder" valign="top" width="16.393939393939394%" headers="mcps1.2.6.1.1 "><p id="p10980079191052"><a name="p10980079191052"></a><a name="p10980079191052"></a>带内网络流出速率</p>
 </td>
-<td class="cellrowborder" valign="top" width="20.202020202020204%" headers="mcps1.2.6.1.2 "><p id="p32490950191052"><a name="p32490950191052"></a><a name="p32490950191052"></a>√</p>
+<td class="cellrowborder" valign="top" width="19.96969696969697%" headers="mcps1.2.6.1.2 "><p id="p32490950191052"><a name="p32490950191052"></a><a name="p32490950191052"></a>√</p>
 </td>
 <td class="cellrowborder" valign="top" width="18.181818181818183%" headers="mcps1.2.6.1.2 "><p id="p11275203711588"><a name="p11275203711588"></a><a name="p11275203711588"></a>√</p>
 </td>
@@ -121,9 +123,9 @@
 <td class="cellrowborder" valign="top" width="23.232323232323235%" headers="mcps1.2.6.1.3 "><p id="p166670699134"><a name="p166670699134"></a><a name="p166670699134"></a>×（暂不支持）</p>
 </td>
 </tr>
-<tr id="row49924776191052"><td class="cellrowborder" valign="top" width="16.161616161616163%" headers="mcps1.2.6.1.1 "><p id="p17375073191052"><a name="p17375073191052"></a><a name="p17375073191052"></a>带外网络流入速率</p>
+<tr id="row49924776191052"><td class="cellrowborder" valign="top" width="16.393939393939394%" headers="mcps1.2.6.1.1 "><p id="p17375073191052"><a name="p17375073191052"></a><a name="p17375073191052"></a>带外网络流入速率</p>
 </td>
-<td class="cellrowborder" valign="top" width="20.202020202020204%" headers="mcps1.2.6.1.2 "><p id="p47003611191052"><a name="p47003611191052"></a><a name="p47003611191052"></a>√</p>
+<td class="cellrowborder" valign="top" width="19.96969696969697%" headers="mcps1.2.6.1.2 "><p id="p47003611191052"><a name="p47003611191052"></a><a name="p47003611191052"></a>√</p>
 </td>
 <td class="cellrowborder" valign="top" width="18.181818181818183%" headers="mcps1.2.6.1.2 "><p id="p528210378589"><a name="p528210378589"></a><a name="p528210378589"></a>√</p>
 </td>
@@ -132,9 +134,9 @@
 <td class="cellrowborder" valign="top" width="23.232323232323235%" headers="mcps1.2.6.1.3 "><p id="p611081299134"><a name="p611081299134"></a><a name="p611081299134"></a>√</p>
 </td>
 </tr>
-<tr id="row27853653191052"><td class="cellrowborder" valign="top" width="16.161616161616163%" headers="mcps1.2.6.1.1 "><p id="p41553431191052"><a name="p41553431191052"></a><a name="p41553431191052"></a>带外网络流出速率</p>
+<tr id="row27853653191052"><td class="cellrowborder" valign="top" width="16.393939393939394%" headers="mcps1.2.6.1.1 "><p id="p41553431191052"><a name="p41553431191052"></a><a name="p41553431191052"></a>带外网络流出速率</p>
 </td>
-<td class="cellrowborder" valign="top" width="20.202020202020204%" headers="mcps1.2.6.1.2 "><p id="p35860361191052"><a name="p35860361191052"></a><a name="p35860361191052"></a>√</p>
+<td class="cellrowborder" valign="top" width="19.96969696969697%" headers="mcps1.2.6.1.2 "><p id="p35860361191052"><a name="p35860361191052"></a><a name="p35860361191052"></a>√</p>
 </td>
 <td class="cellrowborder" valign="top" width="18.181818181818183%" headers="mcps1.2.6.1.2 "><p id="p20289133775812"><a name="p20289133775812"></a><a name="p20289133775812"></a>√</p>
 </td>
@@ -143,9 +145,9 @@
 <td class="cellrowborder" valign="top" width="23.232323232323235%" headers="mcps1.2.6.1.3 "><p id="p595622489134"><a name="p595622489134"></a><a name="p595622489134"></a>√</p>
 </td>
 </tr>
-<tr id="row210295722713"><td class="cellrowborder" valign="top" width="16.161616161616163%" headers="mcps1.2.6.1.1 "><p id="p926613451850"><a name="p926613451850"></a><a name="p926613451850"></a>CPU积分使用量</p>
+<tr id="row210295722713"><td class="cellrowborder" valign="top" width="16.393939393939394%" headers="mcps1.2.6.1.1 "><p id="p926613451850"><a name="p926613451850"></a><a name="p926613451850"></a>CPU积分使用量</p>
 </td>
-<td class="cellrowborder" valign="top" width="20.202020202020204%" headers="mcps1.2.6.1.2 "><p id="p22662457511"><a name="p22662457511"></a><a name="p22662457511"></a>×</p>
+<td class="cellrowborder" valign="top" width="19.96969696969697%" headers="mcps1.2.6.1.2 "><p id="p22662457511"><a name="p22662457511"></a><a name="p22662457511"></a>×</p>
 </td>
 <td class="cellrowborder" valign="top" width="18.181818181818183%" headers="mcps1.2.6.1.2 "><p id="p628211450516"><a name="p628211450516"></a><a name="p628211450516"></a>√（仅T6型支持）</p>
 </td>
@@ -154,9 +156,9 @@
 <td class="cellrowborder" valign="top" width="23.232323232323235%" headers="mcps1.2.6.1.3 "><p id="p122824451951"><a name="p122824451951"></a><a name="p122824451951"></a>√（仅T6型支持）</p>
 </td>
 </tr>
-<tr id="row11525125922719"><td class="cellrowborder" valign="top" width="16.161616161616163%" headers="mcps1.2.6.1.1 "><p id="p172981245758"><a name="p172981245758"></a><a name="p172981245758"></a>CPU积分累积量</p>
+<tr id="row11525125922719"><td class="cellrowborder" valign="top" width="16.393939393939394%" headers="mcps1.2.6.1.1 "><p id="p172981245758"><a name="p172981245758"></a><a name="p172981245758"></a>CPU积分累积量</p>
 </td>
-<td class="cellrowborder" valign="top" width="20.202020202020204%" headers="mcps1.2.6.1.2 "><p id="p1429813458516"><a name="p1429813458516"></a><a name="p1429813458516"></a>×</p>
+<td class="cellrowborder" valign="top" width="19.96969696969697%" headers="mcps1.2.6.1.2 "><p id="p1429813458516"><a name="p1429813458516"></a><a name="p1429813458516"></a>×</p>
 </td>
 <td class="cellrowborder" valign="top" width="18.181818181818183%" headers="mcps1.2.6.1.2 "><p id="p1429816451514"><a name="p1429816451514"></a><a name="p1429816451514"></a>√（仅T6型支持）</p>
 </td>
@@ -165,9 +167,9 @@
 <td class="cellrowborder" valign="top" width="23.232323232323235%" headers="mcps1.2.6.1.3 "><p id="p231354516518"><a name="p231354516518"></a><a name="p231354516518"></a>√（仅T6型支持）</p>
 </td>
 </tr>
-<tr id="row4117334281"><td class="cellrowborder" valign="top" width="16.161616161616163%" headers="mcps1.2.6.1.1 "><p id="p193134459512"><a name="p193134459512"></a><a name="p193134459512"></a>CPU超额积分累积量</p>
+<tr id="row4117334281"><td class="cellrowborder" valign="top" width="16.393939393939394%" headers="mcps1.2.6.1.1 "><p id="p193134459512"><a name="p193134459512"></a><a name="p193134459512"></a>CPU超额积分累积量</p>
 </td>
-<td class="cellrowborder" valign="top" width="20.202020202020204%" headers="mcps1.2.6.1.2 "><p id="p031319456514"><a name="p031319456514"></a><a name="p031319456514"></a>×</p>
+<td class="cellrowborder" valign="top" width="19.96969696969697%" headers="mcps1.2.6.1.2 "><p id="p031319456514"><a name="p031319456514"></a><a name="p031319456514"></a>×</p>
 </td>
 <td class="cellrowborder" valign="top" width="18.181818181818183%" headers="mcps1.2.6.1.2 "><p id="p432994514516"><a name="p432994514516"></a><a name="p432994514516"></a>√（仅T6型支持）</p>
 </td>
@@ -176,9 +178,9 @@
 <td class="cellrowborder" valign="top" width="23.232323232323235%" headers="mcps1.2.6.1.3 "><p id="p432954510516"><a name="p432954510516"></a><a name="p432954510516"></a>√（仅T6型支持）</p>
 </td>
 </tr>
-<tr id="row1613112622813"><td class="cellrowborder" valign="top" width="16.161616161616163%" headers="mcps1.2.6.1.1 "><p id="p2344945456"><a name="p2344945456"></a><a name="p2344945456"></a>CPU超额积分收费量</p>
+<tr id="row1613112622813"><td class="cellrowborder" valign="top" width="16.393939393939394%" headers="mcps1.2.6.1.1 "><p id="p2344945456"><a name="p2344945456"></a><a name="p2344945456"></a>CPU超额积分收费量</p>
 </td>
-<td class="cellrowborder" valign="top" width="20.202020202020204%" headers="mcps1.2.6.1.2 "><p id="p534454514517"><a name="p534454514517"></a><a name="p534454514517"></a>×</p>
+<td class="cellrowborder" valign="top" width="19.96969696969697%" headers="mcps1.2.6.1.2 "><p id="p534454514517"><a name="p534454514517"></a><a name="p534454514517"></a>×</p>
 </td>
 <td class="cellrowborder" valign="top" width="18.181818181818183%" headers="mcps1.2.6.1.2 "><p id="p163442451056"><a name="p163442451056"></a><a name="p163442451056"></a>√（仅T6型支持）</p>
 </td>
@@ -189,6 +191,9 @@
 </tr>
 </tbody>
 </table>
+
+>![](public_sys-resources/icon-note.gif) **说明：**   
+>对于部分监控指标，需弹性云服务器使用的镜像安装vmtools，vmtools安装的具体操作，请参见[https://github.com/UVP-Tools/UVP-Tools/](https://github.com/UVP-Tools/UVP-Tools/)。  
 
 各项监控指标的具体含义与使用说明如[表2](#table2442018718425)所示。
 
