--- a/cn.zh-cn/用户指南/裸金属服务器操作系统监控支持的监控指标.md
+++ b/cn.zh-cn/用户指南/裸金属服务器操作系统监控支持的监控指标.md
@@ -1,6 +1,6 @@
 # 裸金属服务器操作系统监控支持的监控指标<a name="ZH-CN_TOPIC_0107606742"></a>
 
-裸金属服务器（操作系统监控）支持的监控指标有：CPU相关监控指标（[表1](#zh-cn_topic_0104704449_table1274172674913)）、CPU负载类相关监控指标（[表2](#zh-cn_topic_0104704449_table341241110501)）、内存相关监控指标（[表3](#zh-cn_topic_0104704449_table844220384507)）、磁盘相关监控指标（[表4](#zh-cn_topic_0104704449_table1067218184514)）、磁盘I/O类（[表5](#table1559955415558)）、文件系统类（[表6](#table296913551343)）、网卡类（[表7](#zh-cn_topic_0104704449_table19476249105111)）和软RAID相关监控指标（[表8](#zh-cn_topic_0104704449_table17716191314220)）。
+裸金属服务器（操作系统监控）支持的监控指标有：CPU相关监控指标（[表1](#zh-cn_topic_0104704449_table1274172674913)）、CPU负载类相关监控指标（[表2](#zh-cn_topic_0104704449_table341241110501)）、内存相关监控指标（[表3](#zh-cn_topic_0104704449_table844220384507)）、磁盘相关监控指标（[表4](#zh-cn_topic_0104704449_table1067218184514)）、磁盘I/O类（[表5](#table1559955415558)）、文件系统类（[表6](#table296913551343)）、软RAID相关监控指标（[表8](#zh-cn_topic_0104704449_table17716191314220)）和网卡类（[表7](#zh-cn_topic_0104704449_table19476249105111)）。
 
 >![](public_sys-resources/icon-note.gif) **说明：**   
 >-   监控BMS需安装Agent插件，监控周期为10s。  
