--- a/cn.zh-cn/用户指南/创建告警规则-2.md
+++ b/cn.zh-cn/用户指南/创建告警规则-2.md
@@ -89,7 +89,7 @@
         </tr>
         <tr id="row1967024718433"><td class="cellrowborder" valign="top" width="14.97%" headers="mcps1.2.4.1.1 "><p id="p1267374711438"><a name="p1267374711438"></a><a name="p1267374711438"></a>事件名称</p>
         </td>
-        <td class="cellrowborder" valign="top" width="63.43%" headers="mcps1.2.4.1.2 "><p id="p867824754316"><a name="p867824754316"></a><a name="p867824754316"></a>用户操作系统资源的动作，如登录，登出。</p>
+        <td class="cellrowborder" valign="top" width="63.43%" headers="mcps1.2.4.1.2 "><p id="p867824754316"><a name="p867824754316"></a><a name="p867824754316"></a>用户操作系统资源的动作，如用户登录，用户登出，为一个瞬间的操作动作。</p>
         <p id="p206801473435"><a name="p206801473435"></a><a name="p206801473435"></a>事件监控支持的操作事件请参见<a href="事件监控支持的操作事件说明.md">事件监控支持的操作事件说明</a>。</p>
         </td>
         <td class="cellrowborder" valign="top" width="21.6%" headers="mcps1.2.4.1.3 "><p id="p9683447164315"><a name="p9683447164315"></a><a name="p9683447164315"></a>Delete ECS</p>
