--- a/cn.zh-cn/用户指南/创建告警规则-4.md
+++ b/cn.zh-cn/用户指南/创建告警规则-4.md
@@ -106,6 +106,7 @@
         <tr id="row89519954220"><td class="cellrowborder" valign="top" width="14.970000000000002%" headers="mcps1.2.4.1.1 "><p id="p1951159164214"><a name="p1951159164214"></a><a name="p1951159164214"></a>告警策略</p>
         </td>
         <td class="cellrowborder" valign="top" width="63.73000000000001%" headers="mcps1.2.4.1.2 "><p id="p9951189154217"><a name="p9951189154217"></a><a name="p9951189154217"></a>触发告警规则的告警策略。</p>
+        <p id="p667040195419"><a name="p667040195419"></a><a name="p667040195419"></a>当资源类型选择站点监控、日志监控、自定义监控、具体的云服务时，告警策略为一个周期性的动作。当资源类型选择事件监控时，具体的事件为一个瞬间的操作动作，而不是周期性动作。</p>
         <p id="p2095129124217"><a name="p2095129124217"></a><a name="p2095129124217"></a>例如：CPU使用率，监控周期为5分钟，连续三个周期平均值≥80%</p>
         </td>
         <td class="cellrowborder" valign="top" width="21.3%" headers="mcps1.2.4.1.3 "><p id="p29511797423"><a name="p29511797423"></a><a name="p29511797423"></a>-</p>
