--- a/cn.zh-cn/用户指南/云硬盘的监控指标.md
+++ b/cn.zh-cn/用户指南/云硬盘的监控指标.md
@@ -75,7 +75,7 @@
 <td class="cellrowborder" valign="top" width="22.388059701492537%" headers="mcps1.2.4.1.3 "><p id="zh-cn_topic_0095137102_p142119217495"><a name="zh-cn_topic_0095137102_p142119217495"></a><a name="zh-cn_topic_0095137102_p142119217495"></a>云硬盘</p>
 </td>
 </tr>
-<tr id="zh-cn_topic_0095137102_row143683764211"><td class="cellrowborder" valign="top" width="28.35820895522388%" headers="mcps1.2.4.1.1 "><p id="zh-cn_topic_0095137102_p335911116315"><a name="zh-cn_topic_0095137102_p335911116315"></a><a name="zh-cn_topic_0095137102_p335911116315"></a>写操作平均耗时</p>
+<tr id="zh-cn_topic_0095137102_row143683764211"><td class="cellrowborder" valign="top" width="28.35820895522388%" headers="mcps1.2.4.1.1 "><p id="zh-cn_topic_0095137102_p335911116315"><a name="zh-cn_topic_0095137102_p335911116315"></a><a name="zh-cn_topic_0095137102_p335911116315"></a>平均写操作耗时</p>
 </td>
 <td class="cellrowborder" valign="top" width="49.25373134328358%" headers="mcps1.2.4.1.2 "><p id="zh-cn_topic_0095137102_p4562113818612"><a name="zh-cn_topic_0095137102_p4562113818612"></a><a name="zh-cn_topic_0095137102_p4562113818612"></a>该指标用于统计测量对象在测量周期内平均每个写IO的操作时长。</p>
 <p id="zh-cn_topic_0095137102_p35620388615"><a name="zh-cn_topic_0095137102_p35620388615"></a><a name="zh-cn_topic_0095137102_p35620388615"></a>单位：ms/操作。</p>
@@ -83,7 +83,7 @@
 <td class="cellrowborder" valign="top" width="22.388059701492537%" headers="mcps1.2.4.1.3 "><p id="zh-cn_topic_0095137102_p1692316716493"><a name="zh-cn_topic_0095137102_p1692316716493"></a><a name="zh-cn_topic_0095137102_p1692316716493"></a>云硬盘</p>
 </td>
 </tr>
-<tr id="zh-cn_topic_0095137102_row836813764217"><td class="cellrowborder" valign="top" width="28.35820895522388%" headers="mcps1.2.4.1.1 "><p id="zh-cn_topic_0095137102_p728104125011"><a name="zh-cn_topic_0095137102_p728104125011"></a><a name="zh-cn_topic_0095137102_p728104125011"></a>读操作平均耗时</p>
+<tr id="zh-cn_topic_0095137102_row836813764217"><td class="cellrowborder" valign="top" width="28.35820895522388%" headers="mcps1.2.4.1.1 "><p id="zh-cn_topic_0095137102_p728104125011"><a name="zh-cn_topic_0095137102_p728104125011"></a><a name="zh-cn_topic_0095137102_p728104125011"></a>平均读操作耗时</p>
 </td>
 <td class="cellrowborder" valign="top" width="49.25373134328358%" headers="mcps1.2.4.1.2 "><p id="zh-cn_topic_0095137102_p179002168612"><a name="zh-cn_topic_0095137102_p179002168612"></a><a name="zh-cn_topic_0095137102_p179002168612"></a>该指标用于统计测量对象测量在周期内平均每个读IO的操作时长。</p>
 <p id="zh-cn_topic_0095137102_p179016161861"><a name="zh-cn_topic_0095137102_p179016161861"></a><a name="zh-cn_topic_0095137102_p179016161861"></a>单位：ms/操作。</p>
