--- a/cn.zh-cn/用户指南/站点监控简介.md
+++ b/cn.zh-cn/用户指南/站点监控简介.md
@@ -4,7 +4,7 @@
 
 站点监控用于模拟真实用户对远端服务器的访问，从而探测远端服务器的可用性、连通性等问题。
 
-首期支持华北（廊坊）、华东（上海）、华南（广州）、西南（贵阳）、华北（乌兰察布）五个探测点实时监控网站，更多探测点正在部署中。
+首期支持华北（廊坊）、华东（上海）、华南（广州）三个探测点实时监控网站，更多探测点正在部署中。
 
 >![](public_sys-resources/icon-note.gif) **说明：**   
 >目前站点监控功能免费。  
