--- a/cn.zh-cn/用户指南/网络.md
+++ b/cn.zh-cn/用户指南/网络.md
@@ -1,6 +1,6 @@
 # 网络<a name="ZH-CN_TOPIC_0120444303"></a>
 
--   **[虚拟私有云的监控指标](虚拟私有云的监控指标.md)**  
+-   **[弹性公网IP和带宽的监控指标](弹性公网IP和带宽的监控指标.md)**  
 
 -   **[弹性负载均衡服务的监控指标](弹性负载均衡服务的监控指标.md)**  
 
