--- a/cn.zh-cn/用户指南/事件监控简介.md
+++ b/cn.zh-cn/用户指南/事件监控简介.md
@@ -2,7 +2,7 @@
 
 事件监控提供了事件类型数据上报、查询和告警的功能。方便您将业务中的各类重要事件或对云资源的操作事件收集到云监控，并在事件发生时进行告警。
 
-事件即云监控保存并监控的云服务资源的关键操作。您可以通过“事件”了解到谁在什么时间对系统哪些资源做了什么操作。
+事件即云监控保存并监控的云服务资源的关键操作。您可以通过“事件”了解到谁在什么时间对系统哪些资源做了什么操作，如删除虚拟机、重启虚拟机等。
 
 事件监控默认开通，您可以在事件监控中查看系统事件和自定义事件的监控详情，目前支持的系统事件请参见[事件监控支持的操作事件说明](事件监控支持的操作事件说明.md)。
 
