--- a/cn.zh-cn/用户指南/删除自定义告警模板.md
+++ b/cn.zh-cn/用户指南/删除自定义告警模板.md
@@ -1,6 +1,6 @@
 # 删除自定义告警模板<a name="ZH-CN_TOPIC_0084572186"></a>
 
-在“告警 \> 告警模板 \> 自定义告警模板”界面，单击告警模板所在行的“删除”按键，单击“是”即可删除该告警模板。
+在“告警 \> 告警模板 \> 自定义告警模板”界面，单击告警模板所在行的“删除”按键，单击“yes”即可删除该告警模板。
 
 **图 1**  删除自定义告警模板<a name="fig1713616122115"></a>  
 ![](figures/删除自定义告警模板.png "删除自定义告警模板")
