--- a/cn.zh-cn/API参考/对话机器人服务监控指标说明.md
+++ b/cn.zh-cn/API参考/对话机器人服务监控指标说明.md
@@ -32,7 +32,7 @@ SYS.CBS
 </td>
 <td class="cellrowborder" valign="top" width="18.591859185918594%" headers="mcps1.1.6.1.4 "><p id="p178061430151711"><a name="p178061430151711"></a><a name="p178061430151711"></a>0，1</p>
 </td>
-<td class="cellrowborder" valign="top" width="15.781578157815781%" headers="mcps1.1.6.1.5 "><p id="p2632891193"><a name="p2632891193"></a><a name="p2632891193"></a>cqabot_id</p>
+<td class="cellrowborder" valign="top" width="15.781578157815781%" headers="mcps1.1.6.1.5 "><p id="p2632891193"><a name="p2632891193"></a><a name="p2632891193"></a>问答机器人</p>
 </td>
 </tr>
 </tbody>
@@ -49,7 +49,7 @@ SYS.CBS
 </thead>
 <tbody><tr id="zh-cn_topic_0053115439_row55913035213"><td class="cellrowborder" valign="top" width="50%" headers="mcps1.1.3.1.1 "><p id="zh-cn_topic_0053115439_p659119085214"><a name="zh-cn_topic_0053115439_p659119085214"></a><a name="zh-cn_topic_0053115439_p659119085214"></a>qabot_id</p>
 </td>
-<td class="cellrowborder" valign="top" width="50%" headers="mcps1.1.3.1.2 "><p id="zh-cn_topic_0053115439_p5591190145215"><a name="zh-cn_topic_0053115439_p5591190145215"></a><a name="zh-cn_topic_0053115439_p5591190145215"></a>qabot_id</p>
+<td class="cellrowborder" valign="top" width="50%" headers="mcps1.1.3.1.2 "><p id="zh-cn_topic_0053115439_p5591190145215"><a name="zh-cn_topic_0053115439_p5591190145215"></a><a name="zh-cn_topic_0053115439_p5591190145215"></a>问答机器人</p>
 </td>
 </tr>
 </tbody>
