--- a/cn.zh-cn/API参考/示例.md
+++ b/cn.zh-cn/API参考/示例.md
@@ -11,20 +11,43 @@
 
 -   IAM获取token的API。
 -   Cloud Eye查询指标列表的API。
--   Cloud Eye创建告警规则的API
+-   Cloud Eye创建告警规则的API。
 
 ## 具体步骤<a name="zh-cn_topic_0121682346_section7856948"></a>
 
-1.  Token认证，具体操作请参考[获取请求认证](获取请求认证.md)。
+1.  <a name="zh-cn_topic_0121682346_li1837051910476"></a>Token认证，具体操作请参考[获取请求认证](获取请求认证.md)。
 2.  发送“GET  https://Cloud Eye的Endpoint/V1.0/\{project\_id\}/metrics”。
 
-    在Request Header中增加“X-Auth-Token”。
+    在Request Header中增加“X-Auth-Token”，“X-Auth-Token”的取值为[1](#zh-cn_topic_0121682346_li1837051910476)中获取的Token。
 
-    请求响应成功后，返回metrics信息。
+    请求响应成功后，返回metrics信息，如下所示的"metric\_name": "cpu\_util"。
+
+    ```
+    {
+        "metrics": [
+            {
+                "namespace": "SYS.ECS", 
+                "dimensions": [
+                    {
+                        "name": "instance_id", 
+                        "value": "d9112af5-6913-4f3b-bd0a-3f96711e004d"
+                    }
+                ], 
+                "metric_name": "cpu_util", 
+                "unit": "%"
+            }
+        ], 
+        "meta_data": {
+            "count": 1, 
+            "marker": "SYS.ECS.cpu_util.instance_id:d9112af5-6913-4f3b-bd0a-3f96711e004d", 
+            "total": 7
+        }
+    }
+    ```
 
     若请求失败，则会返回错误码及对应的错误信息说明，详细错误码信息请参考[返回错误码说明](返回错误码说明.md)。
 
-3.  发送“POST  https://Cloud Eye的Endpoint/V1.0/\{project\_id\}/alarms”。
+3.  <a name="li1499612710210"></a>发送“POST  https://Cloud Eye的Endpoint/V1.0/\{project\_id\}/alarms”。
 
     在Request Body中传入参数如下：
 
@@ -79,5 +102,5 @@
     若请求失败，则会返回错误码及对应的错误信息说明，详细错误码信息请参考[返回错误码说明](返回错误码说明.md)。
 
 
-1.  根据alarm\_id，可对告警规则进行查询、启停、删除等操作。
+1.  根据[3](#li1499612710210)中的响应alarm\_id，可对告警规则进行查询、启停、删除等操作。
 
