--- a/cn.zh-cn/API参考/附录.md
+++ b/cn.zh-cn/API参考/附录.md
@@ -14,6 +14,8 @@
 
 -   **[弹性文件服务监控指标说明](弹性文件服务监控指标说明.md)**  
 
+-   **[云文件监控指标说明](云文件监控指标说明.md)**  
+
 -   **[弹性公网IP和带宽监控指标说明](弹性公网IP和带宽监控指标说明.md)**  
 
 -   **[弹性负载均衡监控指标说明](弹性负载均衡监控指标说明.md)**  
@@ -31,6 +33,8 @@
 -   **[分布式数据库中间件监控指标说明](分布式数据库中间件监控指标说明.md)**  
 
 -   **[Web应用防火墙监控指标说明](Web应用防火墙监控指标说明.md)**  
+
+-   **[数据库安全服务监控指标说明](数据库安全服务监控指标说明.md)**  
 
 -   **[分布式消息服务监控指标说明](分布式消息服务监控指标说明.md)**  
 
